fix button and spacing in ils

--- a/style.css
+++ b/style.css
@@ -130,18 +130,23 @@ body {
 
 .plans ul {
   text-align: center;
-  padding: 0;
-  margin: 0;
+  padding: 5px;
 }
 
 .plans li {
   list-style: none;
   text-align: center;
-  margin-bottom: 8px;
+}
+
+.plans__select {
+  margin: 8px 0;
 }
 
 .button {
   background: #0e4f1f;
   color: white;
   font: inherit;
+  border: 1.5px solid #0e4f1f;
+  padding: 8px;
+  border-radius: 8px;
 }
